--- a/server/composer.json
+++ b/server/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "qiniu/php-sdk": "^7.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
